[package]
name = "ruscape"
version = "0.0.1"
authors = ["poyeker <poyeker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench2"
harness = false

[profile.bench]
lto="thin"
codegen-units=1

[dependencies]
fxhash= "0.2.1"
indexmap = { version="1.6.0", features=["rayon"]}
itertools = "0.9.0"
rand = "0.7.3"
rand_distr = "0.3.0"
fastrand = "1.3.5"
macroquad = {git = "https://github.com/not-fl3/macroquad.git"}
petgraph = "0.5.1"
petgraph-gen = {git= "https://github.com/poyeker/petgraph-gen"}
serde = "1.0.116"
serde_closure = "0.3.2"
serde_closure_derive = "0.3.2"