[package]
name = "runner"
version = "0.1.0"
authors = ["poyeker <poyeker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv="*"
rand = "*"
ruscape = {path="../../../ruscape"}
crossbeam-channel = "*"
crossbeam-utils = "*"
crossbeam-queue = "0.3.0"
futures = "*"
serde = { version = "*", features = ["rc"] }
serde_derive = "*"
serde_closure = "*"
itertools = "*"